--- a/PackArquivos/templates/navbar.html
+++ b/PackArquivos/templates/navbar.html
@@ -15,7 +15,9 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown_1">
                         <li><a class="dropdown-item" href="{{ url_for('atrasoCadeiras') }}">Cadeiras</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="{{ url_for('atrasoCurvados') }}">Curvados</a></li>
                     </ul>
                 </li>
@@ -27,11 +29,17 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown_2">
                         <li><a class="dropdown-item" href="{{ url_for('listarCadeiras') }}">Cadeiras</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="{{ url_for('listarCurvados') }}">Curvados</a></li>
                     </ul>
                 </li>
+
             </ul>
+            <div class="mt-1" style="color: white">
+                <h5>Sier Moveis - Atrasos Estoque - Unidade 2</h5>
+            </div>
         </div>
     </div>
 </nav>
