--- a/PackArquivos/templates/navbar.html
+++ b/PackArquivos/templates/navbar.html
@@ -40,6 +40,7 @@
             <div class="mt-1" style="color: white">
                 <h5>Sier Moveis - Atrasos Estoque - Unidade 2</h5>
             </div>
+            <img src="{{ url_for('static', filename='logo.jpeg') }}" alt="Logo" class="ms-5" width="40px" height="40px">
         </div>
     </div>
 </nav>
