--- a/PackArquivos/templates/base.html
+++ b/PackArquivos/templates/base.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.jpeg') }}" type="image/x-icon">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='LogoSierCinza.png') }}" type="image/x-icon">
 
         {#  Script do temporizados do flash para as mensagens  #}
         <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
