--- a/PackArquivos/static/estilo.css
+++ b/PackArquivos/static/estilo.css
@@ -30,3 +30,15 @@ tbody th {
     left: 0;
     z-index: 1;
 }
+
+@media screen and (min-height: 1000px) {
+  body {
+    margin: 10px 5px 0px 20px
+  }
+
+  .table-container {
+    width: 100%;
+    overflow-y: auto;
+    max-height: 980px; /* Defina uma altura máxima para a tabela */
+  }
+}
