--- a/PackArquivos/templates/navbar.html
+++ b/PackArquivos/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003366;">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('index') }}" data-bs-theme="ligth">Estoque</a>
+    <div class="container-fluid fs-4">
+        <a class="navbar-brand fs-4" href="{{ url_for('index') }}" data-bs-theme="ligth">Estoque</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,9 +38,9 @@
 
             </ul>
             <div class="mt-1" style="color: white">
-                <h5>Sier Moveis - Atrasos Estoque - Unidade 2</h5>
+                <h4>Sier Moveis - Atrasos Estoque - Unidade 2</h4>
             </div>
-            <img src="{{ url_for('static', filename='LogoSierCinza.png') }}" alt="Logo" class="ms-5" width="80px" height="40px">
+            <img src="{{ url_for('static', filename='LogoSierCinza.png') }}" alt="Logo" class="ms-5 me-2" width="80px" height="40px">
         </div>
     </div>
 </nav>
