--- a/PackArquivos/static/estilo.css
+++ b/PackArquivos/static/estilo.css
@@ -31,6 +31,14 @@ tbody th {
     z-index: 1;
 }
 
+@media screen and (min-height: 830px) {
+  .table-container {
+    width: 100%;
+    overflow-y: auto;
+    max-height: 830px; /* Defina uma altura máxima para a tabela */
+  }
+}
+
 @media screen and (min-height: 1000px) {
   body {
     margin: 10px 5px 0px 20px
